# RizPackageTools

./: .gitignore  Cargo.toml  README.md  build.bat  build.rs  install_env.bat  target_strings.json
.github/workflows/: main.yml
Design/: ui.slint
src/: android_check.rs  log_manager.rs  main.rs  metadata_tools.rs  repack.rs  structs.rs  tools.rs  ui_main.rs  ziptool.rs
