[package]
name = "riz_package_tools"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
log4rs = "1.2.0"
slint = "1.2.0"
msgbox = "0.7.0"
native-dialog = "0.6.4"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.32.0", features = ["full"] }
zip = "0.6.6"
walkdir = "2.4.0"
byteorder = "1.4.3"

[build-dependencies]
slint-build = "1.2.0"